--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         h1{
             text-align: center;
             color: #2563EB;
-            text-shadow:1px 1px 9px 5px #0b0f1ace;
+            text-shadow:3px 5px 8px #0b0f1ace;
         }
         #n1,#n2{
             width: 97%;
