--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #caixa{
             background-color: gray;
-            height: 50vh;
+            height: 59vh;
             width: 50vw;
             margin: auto;
             display: flex;
@@ -52,6 +52,9 @@
             color: #0B0F1A;
             font-size: 1.2em;
         }
+        #imagem{
+            
+        }
     </style>
 </head>
 <body>
@@ -67,6 +70,7 @@
             <input type="button" value="x" class="botão" onclick="operador('x')">
             <input type="button" value="/" class="botão" onclick="operador('/')">
             <div id="result">Reultado</div>
+            <img src="imagens/konata-dance.gif" alt="" id="imagem">
         </div>
     </div>
     <script>
