--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculadora</title>
+    <link rel="shortcut icon" href="imagens/calculadora.png" type="image/x-icon">
     <style>
         #container{
             display: flex;
@@ -52,9 +53,6 @@
             color: #0B0F1A;
             font-size: 1.2em;
         }
-        #imagem{
-            
-        }
     </style>
 </head>
 <body>
@@ -70,7 +68,7 @@
             <input type="button" value="x" class="botão" onclick="operador('x')">
             <input type="button" value="/" class="botão" onclick="operador('/')">
             <div id="result">Reultado</div>
-            <img src="imagens/konata-dance.gif" alt="" id="imagem">
+            <img src="imagens/konata-dance.gif" alt="">
         </div>
     </div>
     <script>
