--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         #caixa{
             background-color: gray;
             height: 80vh;
-            width: 55vw;
+            width: 80vw;
             margin: auto;
             display: flex;
             flex-flow: column nowrap;
@@ -37,7 +37,7 @@
         }
         .botão{
             width: 90%;
-            padding: 6px;
+            padding: 1%;
             background-color: #2563EB;
             color: #FFFFFF;
             border: 1px solid #0B0F1A;
