--- a/index.html
+++ b/index.html
@@ -56,16 +56,19 @@
         #result{
             font-size: 1.2em;
         }
-        #img1{
-           width: 200px;
+        img{
+           width: 168px;
            display: flex;
+        }
+        input{
+            padding: 1%;
         }
     </style>
 </head>
 <body>
     <div id="container">
         <div id="caixa">
-            <img src="imagens/konata-dance.gif" alt="" id="img1">
+            <img src="imagens/konata-dance.gif" alt="">
             <h1>Calculadora</h1>
             <label for="n1">number 1</label>
             <input type="number" name="calculadora" id="n1" required> and
